<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_splash_screen_scene"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_page"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="-0dp"
            android:contentDescription="@string/logo_buangin"
            android:padding="-50dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginwithgoogle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:padding="0dp"
            android:background="@color/white"
            android:clickable="true"
            android:text="@string/login_with_google"
            android:textColor="@color/black"
            android:focusable="true" />

        <Button
            android:id="@+id/loginwith"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:padding="0dp"
            android:background="@color/white"
            android:clickable="true"
            android:text="@string/login_with"
            android:textColor="@color/black"
            android:focusable="true">

        </Button>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints="center"
            android:hint="@string/username"
            android:inputType="text"
            android:background="@drawable/edittext_rectangle"
            android:textColor="@color/black"
            android:scaleType="fitXY"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:autofillHints="center"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:scaleType="fitXY"/>


        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#469723"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="#FFFFFF"

            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>